kubernetes/infrastructure/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    # Tell ArgoCD that SSL is terminated at the ingress level
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # Backend protocol should be HTTPS for ArgoCD
    traefik.ingress.kubernetes.io/router.middlewares: argocd-stripprefix@kubernetescrd
    # Tell Traefik to use HTTPS backend
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  rules:
  - host: argocd.ghart.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443  # Change from 80 to 443
  tls:
  - hosts:
    - argocd.ghart.space
    secretName: argocd-server-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd-server
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-For: ""
